[gd_scene load_steps=2 format=3 uid="uid://bvwkwdgwprvdk"]

[ext_resource type="Script" path="res://scripts/ui/InventoryUI.gd" id="1_inventory_script"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_inventory_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.8)
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0

[node name="HeaderPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
size_flags_horizontal = 3
mouse_filter = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
text = "Inventory (Press ESC to close)"
vertical_alignment = 1



[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemGrid" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="ItemInfoPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ItemInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ItemNameLabel" type="Label" parent="VBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Item Name"

[node name="ItemDescriptionLabel" type="Label" parent="VBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Item description goes here..."
autowrap_mode = 2

[node name="ItemDetailsLabel" type="Label" parent="VBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Details..."

[node name="UseButton" type="Button" parent="VBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Use Item"